'hillfort map view added'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
   <string name="no_listed_sites">No of listed sites: </string>
   <string name="blank_input_warning">Username &amp; Password not complete</string>
   <string name="already_registered_warning">Username already registered</string>
+  <string name="menu_mapView">Map View</string>
+  <string name="title_activity_hillfort_maps">Map of all Hillforts</string>
 </resources>
 
